<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_choose_date">Choose the date</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_daily">Daily</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="label_priority">Priority</string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="label_remove">Remove</string>
</resources>
