<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/padding_small">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/save_edit_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_title"
            android:inputType="text"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/custom_borders"
            android:padding="@dimen/padding_normal"
            app:layout_constraintBottom_toTopOf="@id/save_edit_item_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/save_edit_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/custom_borders"
            android:gravity="top"
            android:hint="@string/label_description"
            android:lines="3"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_title" />

        <TextView
            android:id="@+id/save_edit_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_choose_date"
            android:inputType="date"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_description" />

        <TextView
            android:id="@+id/save_edit_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/save_edit_item_date" />

        <CheckBox
            android:id="@+id/save_edit_item_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reminder"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_date" />

        <CheckBox
            android:id="@+id/save_edit_item_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_repeat"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_reminder" />

        <RadioGroup
            android:id="@+id/save_edit_item_repeat_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_repeat">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_daily" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weekly" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_monthly" />
        </RadioGroup>

        <TextView
            android:id="@+id/save_edit_item_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_priority"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_repeat_radio_group" />

        <TextView
            android:id="@+id/save_edit_item_priority_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            app:layout_constraintLeft_toRightOf="@id/save_edit_item_priority"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_repeat_radio_group" />

        <ImageView
            android:id="@+id/save_edit_item_counter_plus_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/save_edit_item_priority_count"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_repeat_radio_group"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <ImageView
            android:id="@+id/save_edit_item_counter_minus_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/save_edit_item_priority_count"
            app:layout_constraintTop_toBottomOf="@id/save_edit_item_counter_plus_iv"
            app:srcCompat="@android:drawable/arrow_down_float" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
